# image-rs-examples

./: .gitignore  Cargo.toml  README.md
book/: book.toml
book/book/: 404.html  evaluation.html  index.html  intro.html  print.html  searchindex.js  searchindex.json
book/src/: SUMMARY.md  evaluation.md
examples/: 01_iterate.rs  02_image_window.rs  02_iterate_save.rs  02_show_image.rs  03_image_window.rs  03_iterate_save.rs  03_sub_image.rs  03b_window_minifbn.rs  04_pattern.rs  04b_window_minifbn.rs  05_pattern.rs  05_sub_image.rs  06_image_convert.rs  06_image_transform.rs  kaleidoscope.rs
src/: main.rs
