[package]
name = "test-image"
version = "0.1.0"
edition = "2018"
authors = ["Sebastian Ziebell <sebastian.ziebell@ferrous-systems.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"

# some convenience crates to make things easier
show-image = { version = "0.9.2", features = ["image"]}
anyhow = "1.0.42"
minifb = "0.19.3"
